fix for the tables horizontal scrolling

--- a/Harvest.Web/ClientApp/src/sass/_components.scss
+++ b/Harvest.Web/ClientApp/src/sass/_components.scss
@@ -258,6 +258,9 @@ table.dataTable.table-striped>tbody>tr:nth-of-type(2n+1) {
 
 table.harvest-table {
   margin-bottom: 3rem;
+  display: block;
+  width: 100%;
+  overflow-x: auto;
 
   &.dataTable {
     border-collapse: collapse !important;
